[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Scenes/Packed/BG.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/Knight.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/bishop.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/jupiterc.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Scripts/StartScreen.gd" type="Script" id=5]
[ext_resource path="res://Font.tres" type="DynamicFont" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 135, 20 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
extra_spacing_char = 1
extra_spacing_space = -4
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "Fade"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Click:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Start"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Knight:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -80, 111 ), Vector2( 40, 111 ), Vector2( 40, 111 ), Vector2( 40, 111 ), Vector2( 40, 111 ), Vector2( 40, 111 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprites/Knight:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -6.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2, 2.6, 2.8, 3, 3.2, 3.4, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, -90 ), Vector2( 120, -90 ), Vector2( 120, 50 ), Vector2( 120, 40 ), Vector2( 120, 50 ), Vector2( 120, 45 ), Vector2( 120, 50 ), Vector2( 120, 50 ), Vector2( 120, 50 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprites/Bishop:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 4.3, 4.6, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 75 ), Vector2( 360, 75 ), Vector2( 200, 75 ), Vector2( 205, 75 ), Vector2( 200, 75 ), Vector2( 200, 75 ), Vector2( 200, 75 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprites/Bishop2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 4.3, 4.6, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 105 ), Vector2( 360, 105 ), Vector2( 240, 105 ), Vector2( 245, 105 ), Vector2( 240, 105 ), Vector2( 240, 105 ), Vector2( 240, 105 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprites/Bishop3:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 4.3, 4.6, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 75 ), Vector2( 360, 75 ), Vector2( 275, 75 ), Vector2( 280, 75 ), Vector2( 275, 75 ), Vector2( 275, 75 ), Vector2( 275, 75 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprites/Bishop4:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 4.3, 4.6, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 140 ), Vector2( 360, 140 ), Vector2( 275, 140 ), Vector2( 280, 140 ), Vector2( 275, 140 ), Vector2( 275, 140 ), Vector2( 275, 140 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Sprites/Bishop5:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 4.3, 4.6, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 140 ), Vector2( 360, 140 ), Vector2( 200, 140 ), Vector2( 205, 140 ), Vector2( 200, 140 ), Vector2( 200, 140 ), Vector2( 200, 140 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Sprites/Bishop:rotation_degrees")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, 0.0, 0.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Sprites/Bishop2:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Sprites/Bishop3:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, 0.0, 0.0, 0.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Sprites/Bishop4:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, 0.0, 0.0, 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sprites/Bishop5:rotation_degrees")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 3.4, 4.2, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, 0.0, 0.0, 0.0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Click:rect_position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 4.2, 5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 48, 360 ), Vector2( 48, 360 ), Vector2( 48, 260 ), Vector2( 48, 280 ), Vector2( 48, 280 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Instructions/Shadow:percent_visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Instructions/Text:percent_visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0 ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[node name="StartScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="StartButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 50, 284 )
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="BG" parent="." instance=ExtResource( 1 )]

[node name="Sprites" type="Node2D" parent="."]
position = Vector2( 5, -50 )

[node name="Knight" type="Sprite" parent="Sprites"]
position = Vector2( 40, 111 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Bishop" type="Sprite" parent="Sprites"]
position = Vector2( 200, 75 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Bishop2" type="Sprite" parent="Sprites"]
position = Vector2( 240, 105 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Bishop3" type="Sprite" parent="Sprites"]
position = Vector2( 275, 75 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Bishop4" type="Sprite" parent="Sprites"]
position = Vector2( 275, 140 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Bishop5" type="Sprite" parent="Sprites"]
position = Vector2( 200, 140 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Control" parent="."]
margin_left = 120.0
margin_top = 50.0
margin_right = 141.0
margin_bottom = 71.9999
rect_scale = Vector2( 4, 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Label"]
margin_left = 3.0
margin_top = 1.0
margin_right = 18.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Label"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.45098, 0.0941176, 1 )
text = "VS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Click" type="Control" parent="."]
margin_left = 48.0
margin_top = 280.0
margin_right = 183.0
margin_bottom = 302.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Click"]
margin_left = 3.0
margin_top = 1.0
margin_right = 18.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Click here To Start"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Click"]
margin_left = 4.0
margin_right = 19.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.266667, 0.0941176, 1 )
text = "Click here To Start"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Instructions" type="Control" parent="."]
margin_left = 24.0
margin_top = 167.0
margin_right = 333.0
margin_bottom = 267.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shadow" type="Label" parent="Instructions"]
margin_right = 310.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Every time the Knight moves to a free cell a new Bishop will be spawned , If Bishops count reached ten you will lose !
Good luck . . ."
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Instructions"]
margin_right = 310.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.670588, 0.0941176, 1 )
text = "Every time the Knight moves to a free cell a new Bishop will be spawned , If Bishops count reached ten you will lose !
Good luck . . ."
align = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 3 )
anims/Start = SubResource( 4 )

[node name="Panel" type="PopupPanel" parent="."]
self_modulate = Color( 1, 1, 1, 0.972549 )
margin_left = 110.061
margin_top = 129.046
margin_right = 241.061
margin_bottom = 237.046
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 131.0
margin_bottom = 108.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 125.0
margin_bottom = 102.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/MarginContainer/VBox"]
self_modulate = Color( 1, 0.215686, 0.215686, 1 )
margin_right = 119.0
margin_bottom = 21.0
custom_fonts/font = ExtResource( 6 )
text = "Choose Difficulty"
align = 1

[node name="Control" type="ColorRect" parent="Panel/MarginContainer/VBox"]
self_modulate = Color( 1, 1, 1, 0.478431 )
margin_top = 29.0
margin_right = 119.0
margin_bottom = 31.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0, 0, 0, 1 )

[node name="Easy" type="Button" parent="Panel/MarginContainer/VBox"]
self_modulate = Color( 1, 0.980392, 0.392157, 1 )
margin_top = 39.0
margin_right = 119.0
margin_bottom = 60.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 6 )
text = "Easy Mode"

[node name="Hard" type="Button" parent="Panel/MarginContainer/VBox"]
modulate = Color( 1, 0.105882, 0.105882, 1 )
margin_top = 68.0
margin_right = 119.0
margin_bottom = 89.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
custom_fonts/font = ExtResource( 6 )
text = "Challenge Mode"
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Panel/MarginContainer/VBox/Easy" to="." method="_on_Difficulty_pressed" binds= [ "Easy" ]]
[connection signal="pressed" from="Panel/MarginContainer/VBox/Hard" to="." method="_on_Difficulty_pressed" binds= [ "Hard" ]]
